PROJECT_TERRAFORM_EKS-master/NS_Backend.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: backend
  name: backend
spec:
  finalizers:
  - kubernetes
status:
  phase: Active
