PROJECT_TERRAFORM_EKS-master/Backend_SVC.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: backend
spec:
  type: ClusterIP
  selector:
    app: tj-backend
  ports:
  - name: backend-svc
    port: 80
    targetPort: 80
